--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,14 +1,8 @@
-html {
-  font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
-  box-sizing: border-box;
-}
 body {
-  margin: 0;
-  height: 100vh;
-  font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: white;
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
   background: #000428 !important; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to left,
@@ -20,12 +14,11 @@ body {
     #1a022e,
     #000428
   ) !important; /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: white;
 }
-#root {
+/* #root {
   height: 100%;
 }
-
+ */
 /* Layout */
 /* .grid-container {
   display: grid;
@@ -37,7 +30,7 @@ body {
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 } */
-header {
+/* header {
   grid-area: header;
   background-color: #203040;
 }
@@ -49,9 +42,9 @@ footer {
   grid-area: footer;
   background-color: #203040;
   color: #ffffff;
-}
+} */
 /* Common */
-h1 {
+/* h1 {
   font-size: 1.8rem;
   padding: 1rem 0;
 }
@@ -59,8 +52,8 @@ h2 {
   font-size: 1.6rem;
   padding: 1rem 0;
 }
-
-a {
+ */
+/* a {
   text-decoration: none;
 }
 a:hover {
@@ -106,7 +99,7 @@ button.small {
   font-size: 1.2rem;
 }
 /* Header */
-header a {
+/*header a {
   color: #ffffff;
   padding: 1rem;
 }
@@ -114,16 +107,16 @@ a.brand {
   color: #ffffff;
   font-size: 3rem;
   font-weight: bold;
-}
-.badge {
+} */
+/*.badge {
   background-color: #f02020;
   color: #ffffff;
-  border-radius: 50%;
-  padding: 0.2rem 0.7rem;
+  border-radius: 50%;*/
+/*  padding: 0.2rem 0.7rem;
   font-size: 1.4rem;
-  margin-left: 0.2rem;
-}
-.row {
+  margin-left: 0.2rem; */
+/*}*/
+/* .row {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -154,11 +147,11 @@ a.brand {
   padding: 1rem;
 }
 /* Aside */
-aside {
+/*aside {
   position: fixed;
   width: 30rem;
   height: 100%;
-  background-color: #efefef;
+  background-color: #858484;
   z-index: 1000;
   transform: translateX(-30rem);
   transition: all 0.5s;
@@ -188,10 +181,10 @@ aside li {
 }
 button.close-sidebar {
   padding: 0.3rem 0.8rem;
-}
+} */
 
 /* Image */
-img {
+/* img {
   border-radius: 0.5rem;
 }
 img.small {
@@ -205,9 +198,9 @@ img.medium {
 img.large {
   width: 100%;
 }
-
+ */
 /* Card */
-.card {
+/* .card {
   border: 0.1rem #c0c0c0 solid;
   background-color: #f8f8f8;
   border-radius: 0.5rem;
@@ -221,9 +214,9 @@ img.large {
 }
 .price {
   font-size: 2rem;
-}
+} */
 /* Rating */
-.rating span {
+/* .rating span {
   color: #f0c040;
   margin: 0.1rem;
 }
@@ -231,10 +224,10 @@ img.large {
   color: #404040;
 }
 /* Alert */
-.loading {
+/* .loading {
   display: block !important;
-}
-.success {
+} */
+/* .success {
   color: #20a020;
 }
 .danger {
@@ -256,9 +249,9 @@ img.large {
 .alert-success {
   color: #20a020;
   background-color: #eeffe0;
-}
+} */
 /* Form */
-.form {
+/* .form {
   max-width: 60rem;
   margin: 0 auto;
 }
@@ -269,9 +262,9 @@ img.large {
 }
 .form label {
   margin: 1rem 0;
-}
+} */
 /* Dropdown */
-.dropdown {
+/* .dropdown {
   display: inline-block;
   position: relative;
 }
@@ -289,9 +282,9 @@ img.large {
 }
 .dropdown:hover .dropdown-content {
   display: block;
-}
+} */
 /* Checkout Steps */
-.checkout-steps > div {
+/* .checkout-steps > div {
   border-top: 0.3rem #c0c0c0 solid;
   color: #c0c0c0;
   flex: 1;
@@ -301,9 +294,9 @@ img.large {
 .checkout-steps > div.active {
   border-top-color: #f08000;
   color: #f08000;
-}
+} */
 /* Table */
-.table {
+/* .table {
   width: 100%;
   border-collapse: collapse;
 }
@@ -318,14 +311,14 @@ img.large {
 }
 .table button {
   margin: 0 0.2rem;
-}
+} */
 /* Carousel */
-.carousel .slide img {
+/*.carousel .slide img {
   max-width: 30rem;
-}
+}*/
 
 /* Search */
-.search button {
+/*.search button {
   border-radius: 0 0.5rem 0.5rem 0;
   border-right: none;
   margin-right: 0.5rem;
@@ -337,10 +330,10 @@ img.large {
 }
 .active {
   font-weight: bold;
-}
+}*/
 
 /* Map */
-.full-container {
+/*.full-container {
   margin: -1rem;
   height: calc(100% + 2rem);
 }
@@ -361,9 +354,9 @@ img.large {
 .map-input-box button {
   border-radius: 0 1rem 1rem 0;
   border-left: 0;
-}
+} */
 /* Pagination */
-.pagination a {
+/*.pagination a {
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 0.5rem;
@@ -375,9 +368,50 @@ img.large {
 }
 .pagination a.active {
   font-weight: bold;
-}
+} */
 
 .toolbar img {
   height: 30px;
   width: auto;
+  z-index: 100;
+}
+
+#imglista {
+  position: relative;
+  width: 100%;
+  height: auto;
+  z-index: 1;
+}
+
+.gris {
+  background: #1A1A1A;
+}
+
+.card{
+  margin-top: 1rem;
+  background: #3a3a3a;
+}
+
+.blanco {
+  color: blue;
+  width: 1.5rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+}
+
+.pagina{
+  border: 1px solid rgb(248, 53, 53);
+}
+
+footer {
+  margin: 0;
+  padding: 0;
+  color: white;
+  background-color: #1A1A1A;
+  width: 100%;
+  height: 4rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
 }
