--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -405,6 +405,10 @@ img.large {
   border-radius: 50%;
 }
 
+.amarillo{
+  color: rgb(206, 209, 47)
+}
+
 .pagina{
   border: 1px solid rgb(248, 53, 53);
 }
@@ -448,3 +452,4 @@ footer {
 .step{
   font-size: 0.7rem;
 }
+
