--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -390,10 +390,10 @@ img.large {
 }
 
 .gris {
-  background: #1A1A1A;
+  background: #1a1a1a;
 }
 
-.card{
+.card {
   margin-top: 1rem;
   background: #3a3a3a;
 }
@@ -405,11 +405,11 @@ img.large {
   border-radius: 50%;
 }
 
-.amarillo{
-  color: rgb(206, 209, 47)
+.amarillo {
+  color: rgb(206, 209, 47);
 }
 
-.pagina{
+.pagina {
   border: 1px solid rgb(248, 53, 53);
 }
 
@@ -417,7 +417,7 @@ footer {
   margin: 0;
   padding: 0;
   color: white;
-  background-color: #1A1A1A;
+  background-color: #1a1a1a;
   width: 100%;
   height: 4rem;
   position: absolute;
@@ -430,8 +430,8 @@ footer {
   color: #f0c040;
 }
 
-.badgecar {  
-  width: 1.5rem;  
+.badgecar {
+  width: 1.5rem;
   background-color: #f02020;
   color: #ffffff;
   border-radius: 50%;
@@ -449,7 +449,7 @@ footer {
   border-top-color: #f08000;
   color: #f08000;
 }
-.step{
+.step {
   font-size: 0.7rem;
 }
 
@@ -462,7 +462,7 @@ footer {
   word-wrap: break-word;
 }
 
-#imglista:hover {  
+#imglista:hover {
   opacity: 0.08;
   -webkit-transition: opacity 500ms;
   -moz-transition: opacity 500ms;
@@ -471,3 +471,11 @@ footer {
   transition: opacity 500ms;
 }
 
+.texto {
+  text-align: justify;
+  font-size: 0.7rem;
+  overflow: hidden;
+  border: none;
+  color: white;
+  background: transparent;
+}
